--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
 </head>
 <body>
 <div id="time">
-    <p>00:00</p>
+    <p>比赛记时：</p>
+    <p>比赛记时：00:00</p>
     <input class="input_private" type="button" value="开始" onclick="start()"/>
     <input class="input_private" type="button" value="暂停" onclick="pause()"/>
     <input class="input_private" type="button" value="继续" onclick="goOn()"/>
