--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
 <div id="time">
     <p>比赛记时：</p>
-    <p>比赛记时：00:00</p>
+    <p class="timedown">00:00</p>
     <input class="input_private" type="button" value="开始" onclick="start()"/>
     <input class="input_private" type="button" value="暂停" onclick="pause()"/>
     <input class="input_private" type="button" value="继续" onclick="goOn()"/>
