--- a/Teser/demo.html
+++ b/Teser/demo.html
@@ -25,7 +25,8 @@
 </head>
 <body>
 <!--<input type="button" class="but" value="判罚" onclick="collection()">-->
-<input type="button" class="but" value="判罚" onclick="appendSomeItems()">
+<input type="button" class="but" value="判罚" onclick="appendPoint()">
+<input type="button" class="but" value="抹去判罚" onclick="delPoint()">
 <ul id="collection">
  <li>Line Item</li>
 </ul>
