--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <span style="font-size: 20px">比赛记时：<p class="timedown">00:00</p></span>
     <input class="input_private" type="button" value="开始" onclick="start()"/>
     <input class="input_private" type="button" value="暂停" onclick="pause()"/>
-    <input class="input_private" type="button" value="继续" onclick="goOn()"/>
+<!--    <input class="input_private" type="button" value="继续" onclick="goOn()"/>-->
     <!--    <input type="button" value="扣分" onclick="black_point()"/>-->
 </div>
 <br>
@@ -189,7 +189,7 @@
     <span style="font-size: 20px">中间休息/金赛局：<p class="timedown2">00:00</p></span>
     <input class="input_private" type="button" value="开始" onclick="start2()"/>
     <input class="input_private" type="button" value="暂停" onclick="pause2()"/>
-    <input class="input_private" type="button" value="继续" onclick="goOn2()"/>
+<!--    <input class="input_private" type="button" value="继续" onclick="goOn2()"/>-->
     <!--    <input type="button" value="扣分" onclick="black_point()"/>-->
 </div>
 
