--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- 倒计时 js -start -->
     <script src="js/1.js"></script>
     <script src="js/jquery-1.8.3.min.js"></script>
-    <script>
-        function black_point() {
-            document.write("⚫");
-        }
-    </script>
+<!--    <script>-->
+<!--        function black_point() {-->
+<!--            document.write("⚫");-->
+<!--        }-->
+<!--    </script>-->
     <link rel="stylesheet" href="css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- 倒计时 js -end-->
