--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--    new 计时器-->
+    <div class="timer"></div>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
+    <script src="https://wow.techbrood.com/libs/jquery/jquery-1.11.1.min.js"></script>
+<!--    new 计时器-->
     <div id="particles"></div>
     <style type="text/css">
         #particles {
@@ -9,7 +16,7 @@
             width: 100%;
             z-index: -1;
             /*background-color: #26AFE3;*/
-            background-color: white;
+            background-color: #ffffff;
         }</style>
     <script src="js/particles.js"></script>
     <meta charset="UTF-8">
