--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
                 this.interval = null
 
                 this.updateInterfaceControls()
+                const audio = new Audio('src/tkd.mp3');
+                audio.play()
             }
 
             static getHTML() {
