--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         font-family: sans-serif;
         display: inline-block;
         padding: 60px 95px;
+        /*padding: 25px 50px;*/
         border-radius: 60px;
         background: white;
         text-align: center;
