--- a/Teser/demo.html
+++ b/Teser/demo.html
@@ -28,7 +28,7 @@
 <input type="button" class="but" value="判罚" onclick="appendPoint()">
 <input type="button" class="but" value="抹去判罚" onclick="delPoint()">
 <ul id="collection">
- <li>Line Item</li>
+<!-- <li>Line Item</li>-->
 </ul>
 <!--    for (i = 0; i < 5000; i++) {-->
 <!--        $('#collection').append('<li>Line Item</li>');-->
