--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
     <link href='https://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'>
     <script src="https://wow.techbrood.com/libs/jquery/jquery-1.11.1.min.js"></script>
-<!--    new 计时器-->
+    <!--    new 计时器-->
     <div id="particles"></div>
     <style type="text/css">
         #particles {
@@ -24,11 +24,11 @@
     <!-- 倒计时 js -start -->
     <script src="js/1.js"></script>
     <script src="js/jquery-1.8.3.min.js"></script>
-<!--    <script>-->
-<!--        function black_point() {-->
-<!--            document.write("⚫");-->
-<!--        }-->
-<!--    </script>-->
+    <!--    <script>-->
+    <!--        function black_point() {-->
+    <!--            document.write("⚫");-->
+    <!--        }-->
+    <!--    </script>-->
     <link rel="stylesheet" href="css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- 倒计时 js -end-->
@@ -184,50 +184,52 @@
 </head>
 <body>
 <!--new 倒计时-->
-<main><style type="text/css">
-    body {
-        margin: 48px;
-        text-align: center;
-    }
+<main>
+    <style type="text/css">
+        body {
+            margin: 48px;
+            text-align: center;
+        }
 
-    .timer {
-        font-family: sans-serif;
-        display: inline-block;
-        padding: 60px 95px;
-        /*padding: 25px 50px;*/
-        border-radius: 60px;
-        background: white;
-        text-align: center;
-    }
+        .timer {
+            font-family: sans-serif;
+            display: inline-block;
+            padding: 60px 95px;
+            /*padding: 25px 50px;*/
+            border-radius: 60px;
+            background: white;
+            text-align: center;
+        }
 
-    .timer__part {
-        font-size: 100px;
-        font-weight: bold;
-        text-align: center;
-    }
+        .timer__part {
+            font-size: 100px;
+            font-weight: bold;
+            text-align: center;
+        }
 
-    .timer__btn {
-        width: 65px;
-        height: 65px;
-        margin-left: 16px;
-        border-radius: 50%;
-        border: none;
-        color: white;
-        background: #8208e6;
-        cursor: pointer;
-    }
+        .timer__btn {
+            width: 65px;
+            height: 65px;
+            margin-left: 16px;
+            border-radius: 50%;
+            border: none;
+            color: white;
+            background: #8208e6;
+            cursor: pointer;
+        }
 
-    .timer__btn--start {
-        background: #00b84c;
-    }
+        .timer__btn--start {
+            background: #00b84c;
+        }
 
-    .timer__btn--stop {
-        background: #ff0256;
-    }
-    .timer__btn--onemin {
-        background: #0093e9;
-    }
-</style>
+        .timer__btn--stop {
+            background: #ff0256;
+        }
+
+        .timer__btn--onemin {
+            background: #0093e9;
+        }
+    </style>
     <script type="text/javascript">
         class Timer {
             constructor(root) {
