--- a/old/index.html
+++ b/old/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>跆拳道比赛系统 1.0-流沙团队</title>
+    <title>厦门工学院第一届跆拳道比赛计时器</title>
     <div id="particles"></div>
     <!--	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <link href="css/family=Material+Icons.css" rel="stylesheet">
@@ -29,7 +29,9 @@
     </style>
     <div id="root"></div>
 
-   <!--<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>-->
+    <!--<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>-->
+    <script crossorigin src="js/react.development.js"></script>
+    <script crossorigin src="js/react-dom.development.js"></script>
     <script src="js/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="./source/bootstrap.min.css">
     <script src="./source/jquery-3.3.1.slim.min.js"></script>
@@ -207,7 +209,7 @@
 <div id="container">
     <div id="player1">
         <div id="p1score">
-            <h1>红方</h1>
+            <h1>青方</h1>
             <ul>
                 <li class="scoreblock plus" onclick="addOne(score1)" id="1">+</li>
                 <li class="scoreblock minus" onclick="minusOne(score1)">-</li>
@@ -223,7 +225,7 @@
     <div id="player2">
         <div id="p2score">
 
-            <h1>青方</h1>
+            <h1>红方</h1>
             <ul>
                 <li class="scoreblock plus" onclick="addOne(score2)">+</li>
                 <li class="scoreblock minus" onclick="minusOne(score2)">-</li>
@@ -255,7 +257,7 @@
         /*background-color: background-color: #FBDA61;*/
         background-color: #FBDA61;
         /*background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);*/
-        background-image: linear-gradient(0deg, red 0%, red 100%);
+        background-image: linear-gradient(45deg, blue 0%, blue 100%);
         float: left;
         /*width: 250px;*/
         width: 200px;
@@ -274,7 +276,7 @@
     #player2 {
         background-color: background-color: #08AEEA;
         /*background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);*/
-        background-image: linear-gradient(45deg, blue 0%, blue 100%);
+        background-image: linear-gradient(0deg, red 0%, red 100%);
         border-bottom-left-radius: 30px;
         border-bottom-right-radius: 30px;
         float: right;
@@ -633,38 +635,5 @@
         height: 100px;
     }
 </style>
-<!--数据导出-->
-<div class="new">
-<button id="sf" type="button">数据导出</button>
-</div>
-<script src="js/FileSaver.js"></script>
-<script id="new" type="text/javascript">
-    document.querySelector('#sf').addEventListener('click', saveFile);
 
-    function fakeClick(obj) { 
-       var ev = document.createEvent("MouseEvents");
-　　　　ev.initMouseEvent("click", true, false, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
-　　　　obj.dispatchEvent(ev);
-　　}
-
-　　function exportRaw(name, data) {
-　　　　var urlObject = window.URL || window.webkitURL || window;
-　　　　var export_blob = new Blob([data]);
-　　　　var save_link = document.createElementNS("http://www.w3.org/1999/xhtml", "a")
-　　　　save_link.href = urlObject.createObjectURL(export_blob);
-　　　　save_link.download = name;
-　　　　fakeClick(save_link);
-　　}
-　　function saveFile(){
-        var inValue = "青方"+document.getElementById("p220").innerHTML;
-        var inT = "红方"+document.getElementById("p120").innerHTML;
-        exportRaw('得分.txt',inValue+inT);
-　　}
-</script>
-<style type="text/css">
-    .new{
-        position:fixed; bottom:0;
-        text-align: center;
-    }
-</style>
 </html>
